--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "check": "astro check",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview_astro": "astro preview",
+    "preview": "wrangler pages dev ./dist",
     "astro": "astro"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "@iconify-json/line-md": "^1.1.37",
     "@iconify-json/mdi": "^1.1.66",
     "@tailwindcss/typography": "^0.5.13",
-    "daisyui": "^4.10.3"
+    "daisyui": "^4.10.3",
+    "wrangler": "^3.53.1"
   }
 }
