--- a/web/package.json
+++ b/web/package.json
@@ -14,17 +14,27 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/cloudflare": "^10.2.5",
+    "@astrojs/svelte": "^5.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@clerk/clerk-js": "^5.2.1",
+    "@clerk/types": "^4.2.1",
+    "@nanostores/router": "^0.15.0",
     "astro": "^4.7.0",
+    "astro-clerk-auth": "^0.0.10",
     "astro-icon": "^1.1.0",
+    "convex": "^1.11.3",
+    "convex-svelte": "^0.0.8",
+    "crypto": "^1.0.1",
+    "nanostores": "^0.9.5",
+    "svelte": "^5.0.0-next.123",
     "tailwindcss": "^3.4.3",
     "theme-change": "^2.5.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.21",
     "@iconify-json/line-md": "^1.1.37",
     "@iconify-json/mdi": "^1.1.66",
+    "@iconify/svelte": "^4.0.2",
     "@tailwindcss/typography": "^0.5.13",
     "daisyui": "^4.10.3",
     "wrangler": "^3.53.1"
