--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@layouts/*": ["src/layouts/*"],
+      "@app/*": ["src/app/*"],
+      "@site/*": ["src/site/*"],
       "@assets/*": ["src/assets/*"]
     }
   }
