--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,9 @@
     "convex": "^1.11.3",
     "convex-svelte": "^0.0.8",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.11",
+    "micromark": "^4.0.0",
+    "micromark-util-types": "^2.0.0",
     "nanostores": "^0.9.5",
     "svelte": "^5.0.0-next.123",
     "tailwindcss": "^3.4.3",
