--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "forks/convex-svelte"]
-	path = web/convex-svelte
+	path = forks/convex-svelte
 	url = git@github.com:yjpark/convex-svelte.git
