--- a/web/justfile
+++ b/web/justfile
@@ -1,8 +1,22 @@
+export DB_NAME := "jour/schema"
+
 dev:
     bunx --bun astro dev --host
 
 convex-dev:
     bunx --bun convex dev
+
+db-generate-migrations:
+    bunx drizzle-kit generate
+
+db-migrate:
+    bunx tsx migrate.ts
+
+mycli-local:
+    mycli --host localhost --port 3306 --user root jour/main
+
+mycli-local-schema:
+    mycli --host localhost --port 3306 --user root jour/schema
 
 npx-dev:
     npx astro dev --host
