--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@astrojs/cloudflare": "^10.2.5",
     "@astrojs/svelte": "^5.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@auth/core": "^0.18.6",
     "@clerk/clerk-js": "^5.4.0",
     "@clerk/types": "^4.2.1",
     "@iconify/svelte": "^4.0.2",
@@ -27,8 +28,12 @@
     "crypto": "^1.0.1",
     "date-picker-svelte": "^2.12.0",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.10",
+    "install": "^0.13.0",
     "micromark": "^4.0.0",
     "micromark-util-types": "^2.0.0",
+    "mysql2": "^3.9.7",
     "nanostores": "^0.9.5",
     "svelte": "^5.0.0-next.123",
     "tailwindcss": "^3.4.3",
@@ -39,6 +44,7 @@
     "@iconify-json/mdi": "^1.1.66",
     "@tailwindcss/typography": "^0.5.13",
     "@types/bun": "^1.1.2",
+    "drizzle-kit": "^0.21.2",
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.46.1",
     "flowbite-svelte-icons": "^1.6.1",
