--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@surreal/*": [
+        "surreal/*"
+      ],
       "@convex/*": [
         "convex/*"
       ],
